src/test/ui/pub/pub-restricted-non-path.stderr
error: expected identifier, found `.`
  --> $DIR/pub-restricted-non-path.rs:3:6
   |
LL | pub (.) fn afn() {}
   |      ^ expected identifier

error: aborting due to previous error

